[gd_scene load_steps=9 format=2]

[ext_resource path="res://ostrich-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menufont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/Menu/background.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/slider.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
margin_left = 8.0
margin_top = 16.0
margin_right = 888.0
margin_bottom = 488.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 880.0
margin_bottom = 472.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 400.0
margin_bottom = 472.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 181.0
rect_min_size = Vector2( 400, 0 )

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 400.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 400.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Display[/center]"
text = "Display"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 400.0
margin_bottom = 123.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 235.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Resolution"
fit_content_height = true
scroll_active = false

[node name="Resolution" type="OptionButton" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 239.0
margin_right = 400.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "1920x1080"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 400.0
margin_bottom = 181.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 217.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Display Mode"
fit_content_height = true
scroll_active = false

[node name="DisplayMode" type="OptionButton" parent="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 221.0
margin_right = 400.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "Windowed"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 400.0
margin_bottom = 472.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 400.0
margin_bottom = 287.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 400.0
margin_bottom = 287.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 400.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Audio[/center]"
text = "Audio"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 69.0
margin_right = 400.0
margin_bottom = 167.0
custom_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Master Volume"
fit_content_height = true
scroll_active = false

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 400.0
margin_bottom = 98.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_left = 404.0
margin_right = 880.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer3"]
margin_right = 476.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer3"]
margin_right = 476.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer"]
margin_right = 476.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Key Bindings[/center]"
text = "Key Bindings"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer"]
margin_top = 69.0
margin_right = 476.0
margin_bottom = 118.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
margin_right = 280.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Forwards"
fit_content_height = true
scroll_active = false

[node name="Forwards" type="TextureButton" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_right = 476.0
margin_bottom = 49.0
size_flags_horizontal = 9
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/Forwards"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/Forwards/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Record New[/center]"
text = "Record New"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer"]
margin_top = 122.0
margin_right = 476.0
margin_bottom = 171.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
margin_right = 280.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Backwards"
fit_content_height = true
scroll_active = false

[node name="Backwards" type="TextureButton" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
margin_left = 284.0
margin_right = 476.0
margin_bottom = 49.0
size_flags_horizontal = 9
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2/Backwards"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2/Backwards/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Record New[/center]"
text = "Record New"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer"]
margin_top = 175.0
margin_right = 476.0
margin_bottom = 224.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
margin_right = 280.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Left"
fit_content_height = true
scroll_active = false

[node name="Left" type="TextureButton" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
margin_left = 284.0
margin_right = 476.0
margin_bottom = 49.0
size_flags_horizontal = 9
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/Left"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/Left/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Record New[/center]"
text = "Record New"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer"]
margin_top = 228.0
margin_right = 476.0
margin_bottom = 277.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer4"]
margin_right = 280.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Right"
fit_content_height = true
scroll_active = false

[node name="Right" type="TextureButton" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer4"]
margin_left = 284.0
margin_right = 476.0
margin_bottom = 49.0
size_flags_horizontal = 9
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer4/Right"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer4/Right/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Record New[/center]"
text = "Record New"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer"]
margin_top = 281.0
margin_right = 476.0
margin_bottom = 330.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer5"]
margin_right = 280.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Brake"
fit_content_height = true
scroll_active = false

[node name="Brake" type="TextureButton" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer5"]
margin_left = 284.0
margin_right = 476.0
margin_bottom = 49.0
size_flags_horizontal = 9
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer5/Brake"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer5/Brake/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Record New[/center]"
text = "Record New"
fit_content_height = true
scroll_active = false

[node name="Back" type="TextureButton" parent="."]
margin_left = 344.0
margin_top = 424.0
margin_right = 536.0
margin_bottom = 472.0
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Back"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Back/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Back[/center]"
text = "Back"
fit_content_height = true
scroll_active = false
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/Resolution" to="." method="_on_Resolution_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/DisplayMode" to="." method="_on_DisplayMode_item_selected"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/Forwards" to="." method="_on_Forwards_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2/Backwards" to="." method="_on_Backwards_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer4/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer5/Brake" to="." method="_on_Brake_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
